--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "ts-node-dev --transpile-only --respawn --poll src/index.ts",
 		"build": "NODE_ENV=production rm -rf build && tsc",
-		"lint": "yarn eslint src --ext .ts,.js"
+		"lint": "yarn eslint src --fix --ext .ts,.js"
 	},
 	"repository": {
 		"type": "git",
